# StereoReconstruction

./: README.md
Codes/Chang-MICCAI2013/: HuberL1CVPrecond_mex.mexw64  StereoReconstHuberL1.m
Codes/Chang-MICCAI2013/data/tsukuba/: disp2.pgm
Codes/Chang-MICCAI2013/gpu/: HuberL1CVPrecond_mex.cu
Codes/GPUStereoMatching/src/: CMakeLists.txt
Codes/GPUStereoMatching/src/Common/: CMakeLists.txt  vtkCLUtils.cpp  vtkCLUtils.hpp
Codes/GPUStereoMatching/src/Examples/: CMakeLists.txt  COCV_test_main.cpp  guided_filter_main.cpp  main.cpp  stereo_main.cpp
Codes/GPUStereoMatching/src/Filters/: CMakeLists.txt  vtkGuidedFilter.cl  vtkGuidedFilterAlgo.cpp  vtkGuidedFilterAlgo.hpp  vtkGuidedFilterMath.cpp  vtkGuidedFilterMath.hpp
Codes/GPUStereoMatching/src/GPUStereoCorrespondence/: BFCostAggregator.cpp  BFCostAggregator.hpp  CMakeLists.txt  COCV.cpp  COCV.hpp  CostVolume.cpp  CostVolume.hpp  DisparityOptimizer.cpp  DisparityOptimizer.hpp  GPUStereoDenseCorrespondence.cl  GPUStereoDenseCorrespondence.cpp  GPUStereoDenseCorrespondence.hpp  GradientFilter.cpp  GradientFilter.hpp  GrayscaleFilter.cpp  GrayscaleFilter.hpp  vtkGuidedFilter.cl
Codes/GPUStereoMatching/src/Tools/: opencv_reproject_image_pcl.cpp
Codes/Sub-Label_Stereo/: StereoReconst_Sublabel_Lifting.m  compute_convex_conjugate.cpp  compute_convex_conjugate.mexw64  compute_stereo_ZNCC_cost.m  main.m  read_ground_truth_disparity.m  read_video_file.m  stereo_sublabel.m  sublabel_lifting_convex.m
Codes/Sub-Label_Stereo/miccai2013/: HuberL1CVPrecond_kernels.cuh  HuberL1CVPrecond_mex.cu  StereoReconstHuberL1.m  compile_HuberL1CVPrecond_mex.m
Codes/guided_filter/Cuda/src/: CMakeLists.txt  GuidedFilter.cpp  kernels.c  kernels.ocl
Codes/guided_filter/OpenCL/src/: CMakeLists.txt  GuidedFilter.h  main.cpp
Codes/guided_filter/OpenCL/src/Common/: CMakeLists.txt  vtkCLUtils.cpp  vtkCLUtils.hpp
Codes/guided_filter/OpenCL/src/Examples/: CMakeLists.txt  main.cpp
Codes/guided_filter/OpenCL/src/GuidedFilter/: CMakeLists.txt
Codes/guided_filter/OpenCL/src/Kernels/: boxFilter_kernels.cl  imageSupport_kernels.cl
