
PROJECT(GuidedFilter)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

FIND_PACKAGE(VTK 6.2 REQUIRED)
INCLUDE(${VTK_USE_FILE})

FIND_PACKAGE(OpenCV)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIR})

INCLUDE_DIRECTORIES("..\\src\\inc")
LINK_LIBRARIES("..\\src\\lib\\OpenCL\\Win32\\OpenCL.lib")
LINK_LIBRARIES("..\\src\\lib\\glut\\glut32.lib")

FIND_PACKAGE(OpenMP)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /openmp")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /openmp")

ADD_EXECUTABLE(${PROJECT_NAME} main.cpp 
				kernels.cl 
				utils.cpp utils.h 
				GuidedFilter.h GuidedFilter.cpp
				)
SET_SOURCE_FILES_PROPERTIES(kernels.ocl PROPERTIES HEADER_FILE_ONLY TRUE)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${VTK_LIBRARIES} ${PLUSLIB_DEPENDENCIES} ${OpenCV_LIBS})